--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetDocuments.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetDocuments.cshtml
@@ -12,10 +12,24 @@
     cardHeight {
         min-height: 600px;
     }
+
+    .uploadcard-disabled {
+        opacity: 0.5;
+        pointer-events: none; /* block clicks / file browse / buttons */
+        filter: grayscale(100%);
+    }
+
+    .uploadcard-active {
+        opacity: 1;
+        pointer-events: auto;
+        filter: none;
+    }
+
 </style>
+
 <div class="page-header">
     <div>
-        <h1 class="page-title">@Localizer["AssetDocuments"]</h1>
+        <h1 class="page-title" data-tour="ad.pagetitle">@Localizer["AssetDocuments"]</h1>
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
@@ -32,7 +46,7 @@
     <div class="col-md-12">
         <div class="card">
             <div class="card-header border-bottom bg-info-gradient divShadow d-flex justify-content-between align-items-center">
-                <h4 class="m-0 text-muted text-white">@Model.AssetInfo</h4>
+                <h4 class="m-0 text-muted text-white" data-tour="ad.assetinfo">@Model.AssetInfo</h4>
                 <div class="btn-group">
                     <a asp-action="EditAsset" asp-controller="Assets" asp-route-id="@Model.AssetId" class="btn btn-outline-info" data-bs-toggle="tooltip" data-bs-original-title="Edit Asset">
                         <i class="fa fa-edit"></i>
@@ -45,13 +59,16 @@
                     </a>
                 </div>
             </div>
+
             <div class="card-body project-list-table-container">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="card">
                             <div class="card-body">
                                 <div class="table-responsive">
-                                    <table id="tblDocuments" class="table text-nowrap mb-0 table-bordered border-top border-bottom project-list-main">
+                                    <table id="tblDocuments"
+                                           class="table text-nowrap mb-0 table-bordered border-top border-bottom project-list-main"
+                                           data-tour="ad.table">
                                         <thead class="table-head">
                                             <tr>
                                                 <th class="bg-transparent border-bottom-0 w-5">@Localizer["SNo"]</th>
@@ -83,16 +100,22 @@
                                                         </td>
                                                         <td class="text-muted fs-15 fw-semibold">
                                                             <div class="d-flex align-items-stretch">
-                                                                <a href="#" onclick="showCardUpload(@dt.DocumentTypeId)" class="btn btn-sm btn-outline-info border me-2">
+                                                                <a href="#"
+                                                                   onclick="showCardUpload(@dt.DocumentTypeId)"
+                                                                   class="btn btn-sm btn-outline-info border me-2"
+                                                                   data-tour="ad.uploadbtn">
                                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-upload" viewBox="0 0 16 16">
                                                                         <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
                                                                         <path d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708l3-3z" />
                                                                     </svg>
                                                                 </a>
+
                                                                 @{
                                                                     if (dt.Id > 0)
                                                                     {
-                                                                        <a href="#" class="btn btn-sm btn-outline-secondary border me-2" onclick="deleteDocument(@dt.Id);">
+                                                                        <a href="#"
+                                                                           class="btn btn-sm btn-outline-secondary border me-2"
+                                                                           onclick="deleteDocument(@dt.Id);">
                                                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                                                                                 <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
                                                                                 <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
@@ -122,7 +145,7 @@
 
                     </div>
                     <div class="col-md-6">
-                        <div class="card" id="cardUpload" style="display:none;">
+                        <div class="card uploadcard-disabled" id="cardUpload" data-tour="ad.uploadcard">
                             <div class="card-header">
                                 <h6>@Localizer["UploadDocument"]</h6>
                             </div>
@@ -141,7 +164,7 @@
 
                                     <div class="form-group">
                                         <button class="btn btn-primary btn-sm"><i class="fa fa-solid fa-upload"></i> @Localizer["Upload"]</button>
-                                        <button class="btn btn-gray btn-sm" id="btnCancel"><i class="fa fa-times-circle-o"></i> @Localizer["Cancel"]</button>
+                                        <button class="btn btn-gray btn-sm" id="cancelbtn"><i class="fa fa-times-circle-o"></i> @Localizer["Cancel"]</button>
                                     </div>
                                 </form>
 
@@ -151,95 +174,41 @@
                     </div>
                 </div>
             </div>
+
             <div class="card-footer">
                 <div class="row">
-                    @*<hr class="customHR" />*@
                     <div class="col-sm-12">
-                        <a asp-action="Index" asp-controller="Assets" asp-route-id="@Model.StoreId" id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;@Localizer["Previous"]</a>
+                        <a asp-action="Index"
+                           asp-controller="Assets"
+                           asp-route-id="@Model.StoreId"
+                           id="btnCancel"
+                           class="btn btn-outline-default"
+                           data-tour="ad.back">
+                            <i class="fe fe-corner-up-left"></i>&nbsp;@Localizer["Previous"]
+                        </a>
                     </div>
-
                 </div>
             </div>
+
         </div>
     </div>
 </div>
+
 <section id="dvDocumentTypesData" style="display:none;"></section>
 @await Html.PartialAsync("~/Views/Shared/_Confirmation.cshtml")
 
 @section Scripts
 {
+    <partial name="_DatatablesAssets" />
     <script>
-        $(document).ready(() => {
-            loadDocumentTypes();
-
-            $("#btnCancel").on("click", (e) => {
-                e.preventDefault();
-                $("#document").val("");
-                $("#cardUpload").hide(400);
-            });
-            makeDataTable("#tblDocuments","1");
-        });
-
-        const loadDocumentTypes = () => {
-            var postData = {};
-            $.ajax({
-                url: '/Users/Assets/GetDocumentTypes',
-                datatype: "json",
-                data: postData,
-                beforeSend: function () {
-
-                },
-                success: function (response) {
-                    if (response.success) {
-                        $("#dvDocumentTypesData").html(response.data);
-                    } else {
-                        showErrorMessageJs(response.message);
-                    }
-                },
-                error: function (xhr, status, error) {
-                    showErrorMessageJs(`Error loading document types: ${error}`);
-                },
-                complete: function () {
-
-                }
-            });
-        }
-
-        const showCardUpload = (id) => {
-            //$("#btnCancel").click();
-            $("#cardUpload").show(300);
-            getDocumentName(id);
-        }
-
-        const deleteDocument = (id) =>{
-            const options = {
-                    actionUrl: `/Users/Assets/DeleteDocument/${id}`,
-                    title: '@Localizer["DeleteDocument"]',
-                    message: '@Localizer["DeleteConfirmationMessage"]',
-                    btnConfirmText: '@Localizer["Confirm"]',
-                    btnCancelText: '@Localizer["Cancel"]'
-                };
-                //console.log(options);
-                openConfirmation(options);
-        }
-
-        const getDocumentName = (id) => {
-            var sData = $("#dvDocumentTypesData").html();
-            var isSomali = getCurrentLanguage();
-
-            var result = tryParseJson(sData, "Document Types");
-            if (result.status === "success") {
-                var data = result.data;
-                data.forEach((e) => {
-                    if (e.Id == id) {
-                        $("#DocumentTypeId").val("").val(e.Id);
-                        $("#lblDocumentName").html("").html(isSomali?e.NameSo:e.Name);
-                    }
-                });
-            } else {
-                showErrorMessageJs(result.message);
-            }
-        }
-
+        // localized strings for delete confirmation
+        window.AMS_ASSET_DOCS = {
+            deleteTitle: '@Localizer["DeleteDocument"]',
+            deleteMessage: '@Localizer["DeleteConfirmationMessage"]',
+            btnConfirmText: '@Localizer["Confirm"]',
+            btnCancelText: '@Localizer["Cancel"]'
+        };
     </script>
-    }
+
+    <script src="~/js/pages/assets-assetdocuments.js"></script>
+}
