--- a/MODAMSWeb/Areas/Users/Views/Assets/EditAsset.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/EditAsset.cshtml
@@ -11,6 +11,11 @@
     input[type="date"]::-webkit-calendar-picker-indicator {
         display: none;
     }
+
+    .vblock-disabled {
+        opacity: 0.5; /* greyed out */
+        pointer-events: none; /* no clicks inside (prevents editing) */
+    }
 </style>
 
 <!-- PAGE-HEADER -->
@@ -267,8 +272,13 @@
     <script src="~/js/tutor/tips/assets-editasset.js"></script>
 
     <script>
-        
-        window.PAMS_EDIT_ASSET = {
+        window.AMS = window.AMS || {};
+        window.AMS.pageData = {
+            categories: @Html.Raw(System.Text.Json.JsonSerializer.Serialize(Model.CategoryList)),
+            subCategories: @Html.Raw(System.Text.Json.JsonSerializer.Serialize(Model.SubCategoryList))
+        };
+
+        window.AMS_EDIT_ASSET = {
             engine: "@Model.Engine",
             chasis: "@Model.Chasis",
             plate: "@Model.Plate",
