--- a/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
@@ -216,7 +216,7 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="card ">
-                    <div class="card-body pnlHeightFooter">
+                    <div class="card-body pnlHeightFooter divShadow--xs">
                         <div class="row">
                             <div class="col-8">
                                 <h5 class="text-muted">@Localizer["TotalAssets"]</h5>
@@ -233,7 +233,7 @@
             </div>
             <div class="col-md-3">
                 <div class="card ">
-                    <div class="card-body pnlHeightFooter">
+                    <div class="card-body pnlHeightFooter divShadow--xs">
                         <div class="row">
                             <div class="col-8">
                                 <h5 class="text-muted">@Localizer["TotalCost"]</h5>
@@ -252,7 +252,7 @@
             </div>
             <div class="col-md-3">
                 <div class="card ">
-                    <div class="card-body pnlHeightFooter">
+                    <div class="card-body pnlHeightFooter divShadow--xs">
                         <div class="row">
                             <div class="col-8">
                                 <h5 class="text-muted">@Localizer["CurrentValue"]</h5>
@@ -271,7 +271,7 @@
             </div>
             <div class="col-md-3">
                 <div class="card ">
-                    <div class="card-body pnlHeightFooter">
+                    <div class="card-body pnlHeightFooter divShadow--xs">
                         <div class="row">
                             <div class="col-8">
                                 <h5 class="text-muted">@Localizer["TotalStores"]</h5>
